--- a/StudentAttendance/StudentAttendance.csproj
+++ b/StudentAttendance/StudentAttendance.csproj
@@ -211,16 +211,11 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\StudentsController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\ApplicationUserMigrations\Configuration.cs" />
-    <Compile Include="Migrations\AttendanceMigrations\201803121446268_Initial Attendance Migration.cs" />
-    <Compile Include="Migrations\AttendanceMigrations\201803121446268_Initial Attendance Migration.Designer.cs">
-      <DependentUpon>201803121446268_Initial Attendance Migration.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\AttendanceMigrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Banner\Attendance.cs" />
@@ -270,9 +265,6 @@
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
     <EmbeddedResource Include="App_Data\BSc4.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\AttendanceMigrations\201803121446268_Initial Attendance Migration.resx">
-      <DependentUpon>201803121446268_Initial Attendance Migration.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
