--- a/StudentAttendance/StudentAttendance.csproj
+++ b/StudentAttendance/StudentAttendance.csproj
@@ -218,6 +218,7 @@
     </Compile>
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\AppplicationDBInitializer.cs" />
     <Compile Include="Models\Banner\Attendance.cs" />
     <Compile Include="Models\Banner\AttendanceDB.cs" />
     <Compile Include="Models\Banner\AttendanceList.cs" />
