--- a/StudentAttendance/Web.config
+++ b/StudentAttendance/Web.config
@@ -8,9 +8,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-StudentAttendance-20180308103350.mdf;Initial Catalog=aspnet-StudentAttendance-20180308103350;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <!--<connectionStrings>
+    <add name="SchoolDB" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\SchoolDB.mdf;Initial Catalog=aspnet-StudentAttendance-20180308103350;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>-->
   <appSettings></appSettings>
   <system.web>
     <authentication mode="None" />
