--- a/WpfApp1/App.config
+++ b/WpfApp1/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="WpfApp1.Properties.Settings.aspnet_StudentAttendance_20180308103350ConnectionString"
+            connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=aspnet-StudentAttendance-20180308103350;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
